# mcu-sandbox

./: .gitignore  README.md
intro_projects/helloworld_blinky/: .cproject  .project  helloworld_blinky_Debug_OpenOCD.launch  helloworld_blinky_Debug_PNE.launch  helloworld_blinky_Debug_Segger.launch  helloworld_blinky_Release_OpenOCD.launch  helloworld_blinky_Release_PNE.launch  helloworld_blinky_Release_Segger.launch
intro_projects/helloworld_blinky/board/: board.c  board.h  pin_mux.c
intro_projects/helloworld_blinky/source/: main.c
ksdkv2_frdm_k64f/: SW-Content-Register-KSDK_2.0.0_GA.txt  ksdk_manifest.xml
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/adc_low_power/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/adc_low_power/armgcc/: CMakeLists.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/adc_low_power/atl/: .cproject  .project  adc_low_power_frdmk64f debug jlink.launch  adc_low_power_frdmk64f debug pne.launch  adc_low_power_frdmk64f release jlink.launch  adc_low_power_frdmk64f release pne.launch
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/adc_low_power/iar/: adc_low_power.ewp
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/adc_low_power/kds/: .cproject  .project  adc_low_power_frdmk64f debug cmsisdap.launch  adc_low_power_frdmk64f debug jlink.launch  adc_low_power_frdmk64f debug pne.launch  adc_low_power_frdmk64f release cmsisdap.launch  adc_low_power_frdmk64f release jlink.launch  adc_low_power_frdmk64f release pne.launch  adc_low_power_frdmk64f.wsd
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/adc_low_power/mdk/: adc_low_power.uvprojx
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/bubble/armgcc/: CMakeLists.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/bubble/atl/: bubble_frdmk64f debug jlink.launch  bubble_frdmk64f debug pne.launch  bubble_frdmk64f release jlink.launch  bubble_frdmk64f release pne.launch
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/bubble/iar/: bubble.ewp
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/bubble/kds/: .project  bubble_frdmk64f debug cmsisdap.launch  bubble_frdmk64f debug jlink.launch  bubble_frdmk64f debug pne.launch  bubble_frdmk64f release jlink.launch  bubble_frdmk64f release pne.launch
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/dac_adc/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/dac_adc/armgcc/: CMakeLists.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/dac_adc/atl/: .cproject  .project  dac_adc_frdmk64f debug jlink.launch  dac_adc_frdmk64f debug pne.launch  dac_adc_frdmk64f release jlink.launch  dac_adc_frdmk64f release pne.launch
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/dac_adc/iar/: dac_adc.ewp
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/dac_adc/kds/: .cproject  .project  dac_adc_frdmk64f debug cmsisdap.launch  dac_adc_frdmk64f debug jlink.launch  dac_adc_frdmk64f debug pne.launch  dac_adc_frdmk64f release cmsisdap.launch  dac_adc_frdmk64f release jlink.launch  dac_adc_frdmk64f release pne.launch  dac_adc_frdmk64f.wsd
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/dac_adc/mdk/: dac_adc.uvprojx
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/ecompass/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/ecompass/armgcc/: CMakeLists.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/ecompass/atl/: .cproject  .project  ecompass_frdmk64f debug jlink.launch  ecompass_frdmk64f debug pne.launch  ecompass_frdmk64f release jlink.launch  ecompass_frdmk64f release pne.launch
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/ecompass/iar/: ecompass.ewp
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/ecompass/kds/: .cproject  .project  ecompass_frdmk64f debug cmsisdap.launch  ecompass_frdmk64f debug jlink.launch  ecompass_frdmk64f debug pne.launch  ecompass_frdmk64f release cmsisdap.launch  ecompass_frdmk64f release jlink.launch  ecompass_frdmk64f release pne.launch  ecompass_frdmk64f.wsd
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/ecompass/mdk/: ecompass.uvprojx
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/hello_world/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/hello_world/armgcc/: CMakeLists.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/lwip/lwip_tcpecho/freertos/armgcc/: CMakeLists.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/power_manager/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/power_mode_switch/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/demo_apps/rtc_func/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/cmt/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/crc/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/ewm/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/lptmr/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/mpu/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/pit/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/rtc/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/sdcard_fatfs/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/driver_examples/wdog/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/mmcau/mmcau_api/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_event/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_generic/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_hello/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_i2c/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_mutex/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_queue/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_sem/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_swtimer/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/rtos_examples/freertos_uart/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/user_apps/bubble/: readme.txt
ksdkv2_frdm_k64f/boards/frdmk64f/user_apps/myProject/: main.c  main.h
ksdkv2_frdm_k64f/devices/MK64F12/arm/: MK64FN1M0xxx12_ram.scf
ksdkv2_frdm_k64f/devices/MK64F12/gcc/: MK64FN1M0xxx12_ram.ld
ksdkv2_frdm_k64f/devices/MK64F12/iar/: MK64FN1M0xxx12_ram.icf
(+2423 files in other folders)
